; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/samples/extr_itufax.c_InputDirection.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/samples/extr_itufax.c_InputDirection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @InputDirection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InputDirection(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @cmsLabEncoded2Float(i32* %7, i32* %8)
  %10 = call i32 @cmsClampLab(i32* %7, i32 85, i32 -85, i32 125, i32 -75)
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @Lab2ITU(i32* %7, i32* %11)
  %13 = load i32, i32* @TRUE, align 4
  ret i32 %13
}

declare dso_local i32 @cmsLabEncoded2Float(i32*, i32*) #1

declare dso_local i32 @cmsClampLab(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @Lab2ITU(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
